feat: use path_join filter for all Ansible paths
- Replace string concatenation with path_join filter across all roles and playbooks
- Fix typo in addpackage.yml (lineinfile.lineinfile → lineinfile)
- Modernize rails role git tasks from inline to YAML format
- Add make verify target for syntax-checking all playbooks
- Add playbook syntax-check step to CI workflow
- Add makefiles/claude.mk for verify targets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,11 @@ jobs:
           source ~/.pyvenv-ansible/bin/activate
           ansible-galaxy collection install -r requirements.yml
 
+      - name: Syntax-check all playbooks
+        run: |
+          source ~/.pyvenv-ansible/bin/activate
+          make verify
+
       - name: Replace tracked files with CI-safe versions
         run: |
           printf '[macbook]\n\n[debian]\n\n[sites]\n' > hosts
