--- a/roles/agent/vars/main.yml
+++ b/roles/agent/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-agent_deploy_dir: "/home/{{ ansible_user }}/claude-agent"
+agent_deploy_dir: "{{ ['/home', ansible_user, 'claude-agent'] | path_join }}"
 agent_assignee: "kawajevo"
 agent_domain: "kawajevo.io37.ch"
 agent_certbot_email: "kawajevo@io37.ch"
