--- a/newsite.yml
+++ b/newsite.yml
@@ -3,7 +3,7 @@
   connection: local
 
   vars:
-    target_dir: "{{ sites_dir | default(playbook_dir + '/../sites') }}"
+    target_dir: "{{ sites_dir | default([playbook_dir, '..', 'sites'] | path_join) }}"
     repo_url: "{{ nginx_repo | default('git@github.com:cerico/nginx-files.git') }}"
     branch_name: "{{ git_branch | default('main') }}"
 
@@ -36,56 +36,56 @@
     - name: Create main yml
       template:
         src: template.yml.j2
-        dest: "{{ target_dir }}/{{ app_name }}.yml"
+        dest: "{{ [target_dir, app_name + '.yml'] | path_join }}"
 
     - name: Ensure files directory in target_dir exists
       file:
-        path: "{{ target_dir }}/files"
+        path: "{{ [target_dir, 'files'] | path_join }}"
         state: directory
         mode: "0755"
 
     - name: Create nginx template
       template:
         src: template.nginx.conf.j2
-        dest: "{{ target_dir }}/files/{{ app_name }}.nginx.conf"
+        dest: "{{ [target_dir, 'files', app_name + '.nginx.conf'] | path_join }}"
 
     - name: Ensure makefiles directory in target_dir exists
       file:
-        path: "{{ target_dir }}/makefiles"
+        path: "{{ [target_dir, 'makefiles'] | path_join }}"
         state: directory
         mode: "0755"
 
     - name: append to makefile.
       template:
-        dest: "{{ target_dir }}/makefiles/{{ app_name }}"
+        dest: "{{ [target_dir, 'makefiles', app_name] | path_join }}"
         src: Makefile.j2
 
     - name: Create site/hosts file if doesnt exist
       ansible.builtin.copy:
         content: "[sites]\n"
-        dest: "{{ target_dir }}/hosts"
+        dest: "{{ [target_dir, 'hosts'] | path_join }}"
         force: false
 
     - name: Add target to inventory file.
       ansible.builtin.lineinfile:
-        path: "{{ target_dir }}/hosts"
+        path: "{{ [target_dir, 'hosts'] | path_join }}"
         line: "{{ app_name }}"
         insertafter: "\\[sites\\]"
 
     - name: Create default site vars directory if doesnt exist
       file:
         state: directory
-        path: "{{ target_dir }}/group_vars/sites"
+        path: "{{ [target_dir, 'group_vars', 'sites'] | path_join }}"
         force: false
 
     - name: Ensure group_vars/sites directory in target_dir exists
       file:
-        path: "{{ target_dir }}/group_vars/sites"
+        path: "{{ [target_dir, 'group_vars', 'sites'] | path_join }}"
         state: directory
         mode: "0755"
 
     - name: Create default site vars if doesnt exit
       copy:
         content: "ansible_user: deploy"
-        dest: "{{ target_dir }}/group_vars/sites/default.yml"
+        dest: "{{ [target_dir, 'group_vars', 'sites', 'default.yml'] | path_join }}"
         force: false
