--- a/roles/functions/tasks/debian.yml
+++ b/roles/functions/tasks/debian.yml
@@ -2,12 +2,12 @@
 - name: Copy debian
   copy:
     src: zsh/debian.zsh
-    dest: ~{{ macbook_user.stdout }}/.zsh/debian.zsh
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', 'debian.zsh'] | path_join }}"
 
 - name: Copy dokku
   copy:
     src: zsh/dokku.zsh
-    dest: ~{{ macbook_user.stdout }}/.zsh/dokku.zsh
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', 'dokku.zsh'] | path_join }}"
 
 - name: Register ansible location
   become: false
@@ -21,7 +21,7 @@
 
 - name: remove old provider.json
   file:
-    path: "~{{ macbook_user.stdout }}/provider.json"
+    path: "{{ ['~' + macbook_user.stdout, 'provider.json'] | path_join }}"
     state: absent
   become: true
   become_user: root
@@ -57,19 +57,19 @@
 - name: create empty tokens file only if one doesnt already exist
   copy:
     content: ""
-    dest: ~{{ macbook_user.stdout }}/.zsh/tokens.zsh
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', 'tokens.zsh'] | path_join }}"
     force: no
 
 - name: create trial file for new functions if one doesn't already exist
   copy:
     content: "tinker(){\n  echo try out new functions here, not in main file\n}"
-    dest: ~{{ macbook_user.stdout }}/.zsh/_trialling.zsh
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', '_trialling.zsh'] | path_join }}"
     force: no
 
 - name: copy js help file
   copy:
     src: help.js
-    dest: ~{{ macbook_user.stdout }}/.zsh/help.js
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', 'help.js'] | path_join }}"
 
 - name: Remove stale rails source line from zshrc
   lineinfile:
