--- a/roles/rails/tasks/main.yml
+++ b/roles/rails/tasks/main.yml
@@ -1,62 +1,68 @@
 ---
 - name: Clone Rbenv
-  git: repo=https://github.com/rbenv/rbenv dest=~{{ macbook_user.stdout }}/.rbenv
+  ansible.builtin.git:
+    repo: https://github.com/rbenv/rbenv
+    dest: "{{ ['~' + macbook_user.stdout, '.rbenv'] | path_join }}"
 
 - name: Clone rbenv build
-  git: repo=https://github.com/rbenv/ruby-build dest=~{{ macbook_user.stdout }}/.rbenv/plugins/ruby-build
+  ansible.builtin.git:
+    repo: https://github.com/rbenv/ruby-build
+    dest: "{{ ['~' + macbook_user.stdout, '.rbenv', 'plugins', 'ruby-build'] | path_join }}"
 
 - name: Copy zsh rails
   copy:
     src: zsh/rails.zsh
-    dest: ~{{ macbook_user.stdout }}/.zsh/rails.zsh
+    dest: "{{ ['~' + macbook_user.stdout, '.zsh', 'rails.zsh'] | path_join }}"
 
 - name: Add Rbenv to .zshrc
   lineinfile:
-    dest: "~{{ macbook_user.stdout }}/.zshrc"
+    dest: "{{ ['~' + macbook_user.stdout, '.zshrc'] | path_join }}"
     regexp: 'source \$HOME/.zsh/rails'
     line: 'source $HOME/.zsh/rails'
     state: present
 
 - name: Clone rbenv vars
-  git: repo=https://github.com/rbenv/rbenv-vars dest=~{{ macbook_user.stdout }}/.rbenv/plugins/rbenv-vars
+  ansible.builtin.git:
+    repo: https://github.com/rbenv/rbenv-vars
+    dest: "{{ ['~' + macbook_user.stdout, '.rbenv', 'plugins', 'rbenv-vars'] | path_join }}"
 
 - name: check ruby {{ ruby_version }} is installed for system
-  shell: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv versions | grep {{ruby_version}}"
+  shell: "{{ ['~' + macbook_user.stdout, '.rbenv', 'bin', 'rbenv'] | path_join }} versions | grep {{ ruby_version }}"
   register: ruby_installed
   changed_when: false
   ignore_errors: yes
   check_mode: no
 
 - name: rbenv install ruby
-  command: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv install --verbose {{ruby_version}}"
+  command: "{{ ['~' + macbook_user.stdout, '.rbenv', 'bin', 'rbenv'] | path_join }} install --verbose {{ ruby_version }}"
   when:
     - ruby_installed.rc != 0
   async: 3600
   poll: 10
 
 - name: check if current system ruby version is {{ ruby_version }}
-  shell: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv version | cut -d ' ' -f 1 | grep -Fx '{{ ruby_version }}'"
+  shell: "{{ ['~' + macbook_user.stdout, '.rbenv', 'bin', 'rbenv'] | path_join }} version | cut -d ' ' -f 1 | grep -Fx '{{ ruby_version }}'"
   register: current_ruby_selected
   changed_when: false
   ignore_errors: yes
   check_mode: no
 
 - name: rbenv set global ruby version and rehash
-  command: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv global {{ruby_version}} && rbenv rehash"
+  shell: "{{ ['~' + macbook_user.stdout, '.rbenv', 'bin', 'rbenv'] | path_join }} global {{ ruby_version }} && rbenv rehash"
   when:
     - current_ruby_selected.rc != 0
 
 - name: 'install bundler v2'
-  command: "~{{ macbook_user.stdout }}/.rbenv/shims/gem install bundler -v 2.2.23"
+  command: "{{ ['~' + macbook_user.stdout, '.rbenv', 'shims', 'gem'] | path_join }} install bundler -v 2.2.23"
 
 - name: 'install rails 7'
-  command: "~{{ macbook_user.stdout }}/.rbenv/shims/gem install rails"
+  command: "{{ ['~' + macbook_user.stdout, '.rbenv', 'shims', 'gem'] | path_join }} install rails"
 
 - name: 'install rails 6'
-  command: "~{{ macbook_user.stdout }}/.rbenv/shims/gem install rails -v 6.1.6.1"
+  command: "{{ ['~' + macbook_user.stdout, '.rbenv', 'shims', 'gem'] | path_join }} install rails -v 6.1.6.1"
 
 - name: 'rehash'
-  command: "~{{ macbook_user.stdout }}/.rbenv/bin/rbenv rehash"
+  command: "{{ ['~' + macbook_user.stdout, '.rbenv', 'bin', 'rbenv'] | path_join }} rehash"
 
 - name: import elastic search
   import_tasks: elastic.yml
