--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: Create conf.d directory
   file:
-    path: "~{{ macbook_user.stdout }}/.ssh/conf.d"
+    path: "{{ ['~' + macbook_user.stdout, '.ssh', 'conf.d'] | path_join }}"
     state: directory
     mode: "0700"
 
 - name: Find existing conf.d files
   find:
-    paths: "~{{ macbook_user.stdout }}/.ssh/conf.d"
+    paths: "{{ ['~' + macbook_user.stdout, '.ssh', 'conf.d'] | path_join }}"
     patterns: "*.conf"
   register: existing_conf_files
 
@@ -25,7 +25,7 @@
 - name: Copy conf.d files
   copy:
     src: "{{ item }}"
-    dest: "~{{ macbook_user.stdout }}/.ssh/conf.d/"
+    dest: "{{ ['~' + macbook_user.stdout, '.ssh', 'conf.d'] | path_join }}/"
     mode: "0600"
   with_fileglob:
     - ssh/conf.d/*.conf
@@ -33,7 +33,7 @@
 - name: Copy SSH config
   copy:
     src: ssh/config
-    dest: "~{{ macbook_user.stdout }}/.ssh/config"
+    dest: "{{ ['~' + macbook_user.stdout, '.ssh', 'config'] | path_join }}"
     mode: "0600"
     backup: yes
 
